[package]
name = "rust-std-wrapper"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = {version = "1.5.16", optional = true}
aws-sdk-s3 = {version = "1.74.0", optional = true}
aws-sdk-sts = {version = "1.59.0", optional = true}
aws-types = {version = "1.3.5", optional = true}
dotenv = "0.15.0"
rpassword = "7.3.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["full"] }

[features]
aws = ["aws-config","aws-sdk-s3","aws-sdk-sts","aws-types"]
