[package]
name = "rust-std-wrapper"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = {version = "1.5.16", optional = true}
aws-sdk-s3 = {version = "1.74.0", optional = true}
aws-sdk-sts = {version = "1.59.0", optional = true}
aws-types = {version = "1.3.5", optional = true}
chrono = {version = "0.4.39", optional = true}
dotenv = {version = "0.15.0", optional = true}
rpassword = {version = "7.3.1", optional = true}
serde = {version = "1.0.217", features = ["derive"], optional = true}
serde_json = {version = "1.0.138", optional = true}
tokio = {version = "1.43.0", features = ["full"], optional = true}

[features]
aws = ["aws-config","aws-sdk-s3","aws-sdk-sts","aws-types"]
use_rpassword = ["rpassword"]
use_dotenv = ["dotenv"]
use_chrono = ["chrono"]
use_serde = ["serde", "serde_json"]
use_tokio = ["tokio"]